<resources>
    <string name="app_name">s354410-plans</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Contacts</string>
    <string name="text_label_3">Appointments</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="contactTitle">New Contact</string>
    <string name="contacts">Contacts</string>
    <string name="appointments">Appointments</string>
    <string name="dateFormatHint">dd-MM-yyyy</string>
    <string name="description">Message to attendees</string>
    <string name="tittle">Title</string>
    <string name="timeFormatHint">HH:MM</string>
    <string name="newAppointment">New Appointment</string>
    <string name="add_attendees">Add attendees</string>
    <string name="select_attendees">Select Attendee(s)</string>
    <string name="nextAppointment">Next appointment:</string>
    <string name="no_appointments">No upcoming appointments</string>
    <string name="untitled_appointment">Untitled Appointment</string>
    <string name="no_message">No message</string>
    <string name="no_attendees">No attendees</string>
    <string name="attendees">Attendees</string>
    <string name="sms_default_text">You have an appointment today at </string>
    <string name="sms_on">SMS ON</string>
    <string name="sms_off">SMS OFF</string>
    <string name="no_input">No input</string>
    <string name="deleted">Deleted</string>
    <string name="sent_sms">Sent sms</string>
    <string name="updated">Updated appointment</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
</resources>