<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <LinearLayout
            android:id="@+id/appointment_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10sp">

            <TextView
                android:id="@+id/appointmentTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20sp"
                android:paddingTop="20sp"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <EditText
                android:id="@+id/appointment_titleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/input_rounded_box"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:textColorHint="@color/light_gray"
                android:hint="@string/tittle"
                android:inputType="textPersonName"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/appointment_descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="20sp"
                android:background="@drawable/input_rounded_box"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:textColor="@color/white"

                android:textColorHint="@color/light_gray" />

            <EditText
                android:id="@+id/dateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/input_rounded_box"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/dateFormatHint"
                android:inputType="date"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/light_gray"

                android:textColor="@color/white" />

            <EditText
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/input_rounded_box"
                android:drawableStart="@drawable/person_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/timeFormatHint"
                android:inputType="time"
                android:paddingHorizontal="20dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:text="@string/add_attendees"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/contactSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:background="@drawable/input_rounded_box"
                android:padding="10sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/attendee_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_weight="0.9"
                />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/add" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
